# MECH-B-4-MLDS-MLDS1

./: .gitignore  .zenodo.json  CITATION.cff  README.md  _quarto.yml  index.html  index.qmd  intro.html  intro.qmd  pyproject.toml  references.bib  references.html  robots.txt  search.json  sitemap.xml  summary.html
.github/workflows/: publish.yml
aufgaben/: uebungsaufgaben.html  uebungsaufgaben.qmd
basics/: linearalgebra.html
dataexploratory/: data_science.html  data_science.qmd  data_sets.html  data_sets.qmd  index.html  index.qmd  tutorial.html  tutorial.qmd
ml_basics/: 2.6 Learning.md
regression/: 2.2 Statistical Learning.md  2.3 Linear Regression.md  2.4 Multiple Linear Regression.md  2.5 Resampling.md  2.7 Classification.md  advanced_linear_regression.html  advanced_linear_regression.qmd  basic_linear_regression.html  basic_linear_regression.qmd  expansions_linear_regression.html  expansions_linear_regression.qmd  index.html  index.qmd  linear.html  logistic_regression.html  logistic_regression.qmd  predictions_linear_regression.html  predictions_linear_regression.qmd  statistical_learning.html  tutorial.html  tutorial.qmd  tutorial2.html
site_libs/bootstrap/: bootstrap-0dcfa715ff78e6c9e420b65659cecc0b.min.css  (+9 more)
statistics/: distributions.html  distributions.qmd  distributiony.qmd  index.html  index.qmd  interference_advanced.html  interference_advanced.qmd  interference_basics.html  interference_basics.qmd  sampling.html  sampling.qmd  tasks.html  tasks.qmd  tutorial.html  tutorial.qmd  tutorial_2.html  tutorial_2.qmd
